unpackaged/main/default/objects/Lead/fields/Asset_Class_Managed__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class_Managed__c</fullName>
    <label>Asset Class Managed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Class_Managed</valueSetName>
    </valueSet>
</CustomField>