unpackaged/main/default/objects/Lead/fields/Lead_Profile__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Profile</label>
    <type>Text</type>
</CustomField>