unpackaged/main/default/objects/Lead/fields/Lead_Status_AQL_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_AQL_Time__c</fullName>
    <label>AQL Date</label>
    <type>DateTime</type>
</CustomField>