unpackaged/main/default/objects/Lead/fields/Lead_Status_MQL_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_MQL_Time__c</fullName>
    <label>MQL Date</label>
    <type>DateTime</type>
</CustomField>