unpackaged/main/default/objects/Lead/fields/Lead_Status_TAL_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_TAL_Time__c</fullName>
    <label>Lead Status TAL Time</label>
    <type>DateTime</type>
</CustomField>