unpackaged/main/default/objects/Lead/fields/Lead_Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status Time</label>
    <type>DateTime</type>
</CustomField>