unpackaged/main/default/objects/Lead/fields/Lead_Working__c.field-meta.xml
<CustomField>
    <fullName>Lead_Working__c</fullName>
    <formula>DATETIMEVALUE(Lead_Status_MQL_Time__c) -  DATETIMEVALUE(Lead_Status_TAL_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Working</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>