unpackaged/main/default/objects/Lead/fields/pi__Needs_Score_Synced__c.field-meta.xml
<CustomField>
    <fullName>pi__Needs_Score_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is no longer used.</description>
    <label>Needs Score Synced</label>
    <type>Checkbox</type>
</CustomField>