unpackaged/main/default/objects/Lead/fields/Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>