unpackaged/main/default/objects/Lead/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Junk Data</fullName>
            </value>
            <value>
                <fullName>False Interest</fullName>
            </value>
            <value>
                <fullName>Company Not a Target</fullName>
            </value>
            <value>
                <fullName>Person not responsive</fullName>
            </value>
            <value>
                <fullName>We don’t have the right product</fullName>
            </value>
            <value>
                <fullName>No operational assets any time soon</fullName>
            </value>
            <value>
                <fullName>Not right geography</fullName>
            </value>
            <value>
                <fullName>Seniority level</fullName>
            </value>
            <value>
                <fullName>Opportunity open w/ other contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>