unpackaged/main/default/objects/Lead/validationRules/Lead_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsConverted = TRUE,
ISBLANK( Email )
)</errorConditionFormula>
    <errorMessage>Update the Email.</errorMessage>
</ValidationRule>