unpackaged/main/default/objects/Lead/validationRules/Source_Campaign_Req_If_Email_Opt_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Campaign_Req_If_Email_Opt_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Email_Opt_In__c = True , ( Source_Campaign__c = NULL ),
False)</errorConditionFormula>
    <errorDisplayField>Source_Campaign__c</errorDisplayField>
    <errorMessage>Source Campaign field is mandatory.</errorMessage>
</ValidationRule>