unpackaged/main/default/objects/Lead/validationRules/Update_the_Status_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_the_Status_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR (
ISPICKVAL( Status , &quot;Rejected&quot;),
ISPICKVAL( Status , &quot;Disqualified&quot;)),
ISBLANK( TEXT( Status_Reason__c ) ))</errorConditionFormula>
    <errorDisplayField>Status_Reason__c</errorDisplayField>
    <errorMessage>Update the Status Reason</errorMessage>
</ValidationRule>