unpackaged/main/default/objects/Lead/listViews/America_Lead.listView-meta.xml
<ListView>
    <fullName>America_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>America</label>
    <queue>America</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>