unpackaged/main/default/objects/Lead/listViews/EMEA_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA</label>
    <queue>EMEA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>